@@ -30,6 +30,9 @@ Bugs fixed
 
 * #932: autodoc: Do not crash if ``__doc__`` is not a string.
 
+* #933: Do not crash if an ``:option:`` value is malformed (contains spaces
+  but no option name).
+
 Documentation
 -------------
 
